[project]
name = "clm_proto_client"
version = "3.2.2"
description = "Client to communicate with the CANlink mobile 10000 protobuf API."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "websocket-client (>=1.2.3)",
    "protobuf (>=3.14.0)",
    "prompt-toolkit (>=3.0.24)",
    "python-dateutil (>=2.8.1)",
    "requests (>=2.28.1)",
    "pyparsing (>=2.4.7)",
    "tabulate (>=0.8.9)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



