[project]
name = "clmprotoclient"
version = "3.2.2"
description = "Client to communicate with the CANlink Mobile 10000 protobuf API."
authors = [
    {name = "Proemion GmbH", email = "info@proemion.com"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["CANlink", "CLM10k", "protobuf", "websocket", "CAN"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = [
    "websocket-client (>=1.2.3)",
    "protobuf (>=3.14.0)",
    "prompt-toolkit (>=3.0.24)",
    "python-dateutil (>=2.8.1)",
    "requests (>=2.28.1)",
    "pyparsing (>=2.4.7)",
    "tabulate (>=0.8.9)",
    "grpcio-tools (>=1.80.0,<2.0.0)",
]

[project.scripts]
clmshell = "clmapi.clmshell:main"

[project.urls]
Repository = "https://github.com/Proemion/CANlink-Mobile-API-Clients"
Issues = "https://github.com/Proemion/CANlink-Mobile-API-Clients/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "grpcio-tools"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
build = "build.py"
packages = [{include = "clmapi"}]
